--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,9 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
-          "skipTests": true
+          "skipTests": true,
+          "changeDetection": "OnPush",
+          "displayBlock": true
         },
         "@schematics/angular:application": {
           "strict": true,
