--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --output-path dist --base-href /clipit/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -15,6 +15,7 @@
     "@angular/common": "~13.3.2",
     "@angular/compiler": "~13.3.2",
     "@angular/core": "~13.3.2",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.3.2",
     "@angular/platform-browser": "~13.3.2",
     "@angular/platform-browser-dynamic": "~13.3.2",
