--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "~13.3.2",
     "@angular/platform-browser-dynamic": "~13.3.2",
     "@angular/router": "~13.3.2",
+    "@types/uuid": "^8.3.4",
     "ngx-mask": "^13.1.10",
     "rxjs": "~7.5.5",
     "tslib": "^2.3.1",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
