--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~13.3.2",
     "@angular/platform-browser-dynamic": "~13.3.2",
     "@angular/router": "~13.3.2",
+    "@ffmpeg/core": "^0.10.0",
+    "@ffmpeg/ffmpeg": "^0.10.1",
     "@types/uuid": "^8.3.4",
     "ngx-mask": "^13.1.10",
     "rxjs": "~7.5.5",
@@ -37,7 +39,7 @@
     "@angular/cli": "^13.3.3",
     "@angular/compiler-cli": "~13.3.2",
     "@types/jasmine": "~4.0.2",
-    "@types/node": "^17.0.23",
+    "@types/node": "^17.0.34",
     "@typescript-eslint/eslint-plugin": "5.19.0",
     "@typescript-eslint/parser": "5.19.0",
     "eslint": "^8.13.0",
