--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
     "@types/uuid": "^8.3.4",
+    "@videojs/themes": "^1.0.1",
     "ngx-mask": "^13.1.10",
     "rxjs": "~7.5.5",
     "tslib": "^2.3.1",
     "uuid": "^8.3.2",
+    "video.js": "^7.19.2",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@angular/compiler-cli": "~13.3.2",
     "@types/jasmine": "~4.0.2",
     "@types/node": "^17.0.34",
+    "@types/video.js": "^7.3.40",
     "@typescript-eslint/eslint-plugin": "5.19.0",
     "@typescript-eslint/parser": "5.19.0",
     "eslint": "^8.13.0",
